# notify-me-bot

./: .env.example  .gitignore  Cargo.toml  NOTICE
conf/: nginx-host.example.config
src/: db.rs  error.rs  http_handler.rs  main.rs  random.rs  state.rs  telegram_bot.rs
src/telegram_bot/: api_type.rs  updates_handler.rs
