[package]
name = "notify-me-bot"
version = "0.1.0"
edition = "2021"
authors = ["Alex Syrnikov <alex.syrnikov19@gmail.com>"]
license = "Apache-2.0"
#repository = "https://github.com/knarkzel/axum-sqlite"
#description = "Sqlite database for axum"
#documentation = "https://docs.rs/axum-sqlite/"
#default-run = "gitcubic"

[dependencies]
#axum = { version = "0.6.1", features = ["headers","ws"] }
axum = {version = "0",default-features = false,features = ["http1","json","matched-path","original-uri","tokio","tower-log"]}
#axum = {version = "0"}
#axum-core = "0"
base64 = "0"
#bytes = "1"
#chrono = "0"
hex = "0"
hyper = { version = "*", features = ["full"] }
hyper-rustls = "0"
once_cell="1"
#regex = "1"
ring = "0"
#rust-argon2 = "1"
rustls = { version="0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
#serde_yaml = "0"
sqlx = { version = "0.7.0-alpha.3", features = [ "runtime-tokio", "sqlite" ] }
#ssh-key="0"
thiserror = "1"
tracing = "0"
tracing-subscriber = "0"
#tokio = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["macros","rt-multi-thread"] }
tower-http={version="0", features=["cors"]}
dotenv = "0.15.0"
